--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <groupId>com.github.hexocraft</groupId>
     <artifactId>wss</artifactId>
     <name>WorldEditStructureSelector</name>
-    <version>1.0.1</version>
+    <version>1.1.0</version>
     <packaging>jar</packaging>
     <description>Auto selects any structures as a WorldEdit cuboid selection.</description>
     <url>https://github.com/hexocraft/WorldEditStructureSelector</url>
@@ -53,8 +53,8 @@
 
     <!-- Propriétés du projet -->
     <properties>
-        <jdk.version>1.7</jdk.version>
-        <bukkit.version>1.12-R0.1-SNAPSHOT</bukkit.version>
+        <jdk.version>1.8</jdk.version>
+        <bukkit.version>1.13.1-R0.1-SNAPSHOT</bukkit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <github.global.server>github</github.global.server>
     </properties>
@@ -86,6 +86,11 @@
         <repository>
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+        </repository>
+        <!-- hexocraft repository -->
+        <repository>
+            <id>hexocraft-repo</id>
+            <url>http://repo.hexocube.fr/artifactory/public</url>
         </repository>
         <!-- hexosse repository -->
         <repository>
@@ -147,9 +152,9 @@
         </dependency>
         <!-- WorldEdit -->
         <dependency>
-            <groupId>3rdParty</groupId>
-            <artifactId>WorldEdit</artifactId>
-            <version>6.1.7-SNAPSHOT</version>
+            <groupId>com.sk89q</groupId>
+            <artifactId>worldedit-bukkit</artifactId>
+            <version>7.0.0-SNAPSHOT</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
